2000-05-27  Julian Missig  <julian@linuxpower.org>

	* gnome-paper-selector.h: SELECTOR, not SELECTER.

2000-05-26  Ian Peters  <itp@gnu.org>

	* gnome-app.h: uncommented GNOME_APP_CLASS and GNOME_IS_APP_CLASS --
	they should be there

Sat May 27 11:42:02 2000  George Lebl <jirka@5z.com>

	* gnome-href.c: Allow draging the link off the button

Sat May 27 01:13:20 2000  George Lebl <jirka@5z.com>

	* dock_demo.c, gnome-file-saver.c, gnome-helpsys.c
	  gnome-mdi-child.h, gnome-mdi-generic-child.c, gnome-preferences.[ch],
	  gnome-roo.c, gnome_segv.c, mdi_demo.c, oafgnome.c,
	  test-recently-used.c:  Fix warnings.

	* gnome-animator.c:  Fix warnings.  Fix an unitialized value problem.

	* gnome-color-picker.c: Add drag and drop for colors.

Mon May 22  Martijn van Beers  <martijn@earthling.net>

	* gnome-gconf.c (gnome_gconf_color_picker_get): actually save the
	                                                alpha
	  (gnome_gconf_gnome_icon_entry_set): don't use the gtk entry
	                                      anymore, but set the icon
					      directly, so the icon gets set

Mon May 22  Martijn van Beers  <martijn@earthling.net>

	* gnome-gconf.c (gnome_gconf_*_set): added a value != check
	  (gnome_gconf_spin_button_get): initialize retval
	  (gnome_gconf_gtk_radio_button_set): fix ending condition in for loop
	  (gnome_gconf_gtk_range_*): allow GCONF_VALUE_INT
	  (gnome_gconf_color_picker_get): save alpha
	  (gnome_gconf_color_picker_set): implement

Sat May 20 14:50:59 2000  George Lebl <jirka@5z.com>

	* gnome-stock.[ch]: the GdkPixbuf getting routine is renamed to
	  gnome_stock_entry_get_gdk_pixbuf.  This is 1) because polluting
	  other namespaces is bad 2) because the function does not create
	  a new pixbuf, but returns an existing one with the refcount
	  incremented.

	* gnome-entry.[ch]: implemented gnome_entry_clear_history

Sat May 20  Martijn van Beers  <martijn@earthling.net>

	* (every GtkObject).h: make sure every object has GNOME_TYPE_