@@ -229,6 +229,9 @@ gnome_message_box_construct (GnomeMessageBox       *messagebox,
 			i++;
 		};
 	}
+
+	gtk_widget_grab_focus(
+		g_list_last (GNOME_DIALOG (messagebox)->buttons)->data);
 	
 	gnome_dialog_set_close (GNOME_DIALOG (messagebox),
 				TRUE );
@@ -278,6 +281,9 @@ gnome_message_box_new (const gchar           *message,
 	}
 	
 	va_end (ap);
+
+	gtk_widget_grab_focus(
+		g_list_last (GNOME_DIALOG (message_box)->buttons)->data);
 
 	return GTK_WIDGET (message_box);
 }
