@@ -1,3 +1,8 @@
+2000-05-31  Jon K Hellan  <hellan@acm.org>
+
+	* gnome-messagebox.c (gnome_message_box_construct,
+	gnome_message_box_new): Set keyboard focus to default button.
+
 2000-05-27  Julian Missig  <julian@linuxpower.org>
 
 	* gnome-paper-selector.h: SELECTOR, not SELECTER.
